# pg-rust-samples

./: README.md
apps/services/: .gitignore  Cargo.toml
apps/services/.config/: nextest.toml
apps/services/crates/api/: Cargo.toml
apps/services/crates/api/src/: lib.rs
apps/services/crates/common/: Cargo.toml
apps/services/crates/common/src/: composit.rs  config.rs  encript.rs  error.rs  fragile.rs  lib.rs  type_check.rs  user_sample.rs  user_sample2.rs  utils.rs
apps/services/crates/fragile/: Cargo.toml
apps/services/crates/fragile/src/: builder.rs  default_struct.rs  fixture.rs  function.rs  lib.rs
apps/services/crates/postgresql/: Cargo.toml
apps/services/crates/postgresql/src/: custom.rs  kbn_constants.rs  lib.rs  table.rs
apps/services/crates/postgresql/src/custom/: sample_get_list_companies.rs
apps/services/crates/postgresql/src/table/: companies.rs  issues.rs  users.rs
apps/services/fixtures/: company.sql  user_jiro.sql  user_taro.sql
apps/services/sample_builder/: Cargo.toml
apps/services/sample_builder/src/: main.rs  sql_builder_helper.rs
apps/services/sample_sqlx/: Cargo.toml
apps/services/sample_sqlx/src/: composit.rs  listen.rs  listen2.rs  main.rs  stream.rs  user_sample.rs  v7.rs
apps/services/samples/: Cargo.toml
apps/services/samples/src/: main.rs
db/sql/: 01_prepare.sql  02_kbn.sql  04_data.sql
db/sql/stored/: .gitignore  sample_get_list_companies.sql  sample_get_list_users.sql  sample_get_list_values.sql  sample_get_select_composite.sql
db/sql/table/: 1_companies.sql  1_users.sql  2_users.sql  3_issues.sql  users.sql
development/: Dockerfile.app  docker-compose.yaml
erd/kbn/: kbn.erd.json
erd/kbn/templates/: rust.ejs  sql.ejs
erd/stored/: sample_get_list_companies.erd.json
erd/stored/templates/: main_rs.ejs  stored_template.ejs
erd/table/: domain.erd.json  table.erd.json  table2.erd.json
erd/table/templates/: table_rs.ejs  table_sql.ejs
