[workspace]

members = ["sample_sqlx", "crates/*"]

resolver = "2"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22.1"
bit-vec = "0.6"
chacha20poly1305 = {version = "0.10.1", features = ["std"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
env_logger = "0.11"
derive_builder = "0.20.2"
futures-util = "0.3.31"
mockito = "1.6.0"
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rust_decimal = "1.36.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "uuid", "macros", "chrono", "rust_decimal", "bit-vec", "ipnetwork", "mac_address", "time"] }
strum = { version = "0.26", features = ["derive"] }
thiserror = "2.0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
unicode-normalization = "0.1.24"
unicode-segmentation = "1.12.0"
uuid = { version = "1", features = ["serde", "v4", "v7"] }