[package]
name = "sample_builder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
env_logger = { workspace = true }
postgresql = { path = "../crates/postgresql" }
serde_json = { workspace = true }
sql_query_builder = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
