[package]
name = "sample_sqlx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
api = { path = "../crates/api" }
bit-vec = { workspace = true }
common = { path = "../crates/common" }
chrono = { workspace = true }
env_logger = { workspace = true }
rust_decimal = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }