[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { workspace = true }
bit-vec = { workspace = true }
chacha20poly1305 = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
unicode-normalization = { workspace = true }
unicode-segmentation = { workspace = true }
uuid = { workspace = true }


[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }