[package]
name = "postgresql"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
common = { path = "../common" }
env_logger = { workspace = true }
derive_builder = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
